# vae-generative-demo

./: .gitignore  README.md  pyproject.toml  quick_commands.md  requirements.txt
outputs/checkpoints/cnn_5_classes/: cnn_best.pt  features_val.pt
outputs/checkpoints/cvae_5_classes/: cvae_best.pt
outputs/datasets/: 5_classes.npz
src/: constants.py  train_cnn.py  train_cvae.py
src/data/: dataset.py  generate_shapes.py
src/models/: cnn_classifier.py  cvae.py
src/viz/: embed_plot.py  latent_walk.py
