[project]
name = "generative-speak"
version = "0.1.0"
description = "AI Tinkerers Demo for Generative Models"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B"]
ignore = ["E501"]